# webgpu-alpha-hint

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  alpha_hint.wgsl  blur.wgsl  conftest.py  console.py  main.py  morphology.wgsl  pyproject.toml  test_pipeline.py  test_shaders.py
src/webgpu_alpha_hint/: __init__.py  _cli.py  console.py  gpu.py  pipeline.py  shader_utils.py
src/webgpu_alpha_hint/shaders/: blur.wgsl  morphology.wgsl
tests/: conftest.py  test_package.py  test_pipeline.py  test_shaders.py
