[project]
name = "webgpu-alpha-hint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "wgpu>=0.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# If you want Ruff to manage both lint + format:
fix = true

[tool.ruff.lint]
select = [
  "E", "F",   # pycodestyle + pyflakes
  "I",        # import sorting
  "UP",       # pyupgrade
  "B",        # bugbear
]
ignore = [
  # Add ignores as you discover noise
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# ty will also infer Python version from project.requires-python if present.
# Keep config minimal at first; you’ll tighten rules once the codebase settles.

[tool.uv]
# (Optional) uv-specific config goes here

[project.scripts]
# (Optional) expose CLI entry points later