[project]
name = "webgpu-alpha-hint"
version = "0.1.0"
description = "GPU-accelerated green-screen keying via WebGPU compute shaders"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "av>=16.1.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "rich>=14.3.3",
    "wgpu>=0.31.0",
]

[project.optional-dependencies]
cli = ["rich-argparse>=1.7.2"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "rich-argparse>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
webgpu-alpha-hint = "webgpu_alpha_hint._cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
# conftest helpers need to be importable by test modules
pythonpath = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  "E", "F", "W",  # pycodestyle + pyflakes
  "I",             # import sorting
  "UP",            # pyupgrade
  "B",             # bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.uv]
